<!--
  ~ Copyright (c) 2017 SamuelGjk <samuel.alva@outlook.com>
  ~
  ~ This file is part of DiyCode
  ~
  ~ DiyCode is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ DiyCode is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with DiyCode. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">DiyCode</string>
    <string name="email_or_name">Email&#160;&#160;/&#160;&#160;用户名</string>
    <string name="sign_in">登&#160;&#160;录</string>
    <string name="password">密码</string>
    <string name="post">帖子</string>
    <string name="my_posts">我的帖子</string>
    <string name="my_favorites">我的收藏</string>
    <string name="my_replies">我的评论</string>
    <string name="about">关于</string>
    <string name="settings">设置</string>
    <string name="search">搜索</string>
    <string name="notification">通知</string>
    <string name="username_non_null">用户名不能为空</string>
    <string name="password_non_null">密码不能为空</string>
    <string name="node">节点</string>
    <string name="title">标题</string>
    <string name="please_input_title">请输入标题</string>
    <string name="content">内容</string>
    <string name="please_input_content">请输入内容</string>
    <string name="new_topic">发布新话题</string>
    <string name="new_news">分享新链接</string>
    <string name="send">发送</string>
    <string name="title_non_null">标题不能为空</string>
    <string name="content_non_null">内容不能为空</string>
    <string name="link_non_null">链接不能为空</string>
    <string name="click_to_login">点击登录</string>
    <string name="link">链接</string>
    <string name="please_input_link">请输入链接</string>
    <string name="category">分类</string>
    <string name="reply">评论</string>
    <string name="tip_network_is_not_available">网络未连接或不可用，请检查后重试</string>
    <string name="follow">关注</string>
    <string name="follower">粉丝</string>
    <string name="topic_preview">话题预览</string>
    <string name="logout">退出登录</string>
    <string name="home">主页</string>
    <string name="close">关闭</string>

    <string name="rationale_external_storage">DiyCode 需要储存权限以实现缓存功能，缺少权限可能会导致 DiyCode 无法正常工作。</string>
    <string name="rationale_ask_again">DiyCode 缺少了运行需要的权限，请到设置界面开启相应权限。</string>

    <!--   About   -->
    <string name="introduce">介绍</string>
    <string name="app_introduce"><b>DiyCode:</b>\nDiyCode由众多开发者共同维护，致力于构建开发工程师高端交流分享社区。\n\n<b>App:</b>\n第三方 DiyCode 客户端</string>
    <string name="developer">开发者</string>
    <string name="developer_info">SamuelGjk\nGitHub: https://github.com/SamuelGjk</string>
    <string name="open_source_libs">使用的开源库</string>
    <string name="open_source_licenses">开源协议</string>

    <string-array name="category_names">
        <item>Topics</item>
        <item>News</item>
        <item>Sites</item>
    </string-array>
</resources>
