<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 SamuelGjk <samuel.alva@outlook.com>
  ~
  ~ This file is part of DiyCode
  ~
  ~ DiyCode is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ DiyCode is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with DiyCode. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group_user"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/navigation_post"
            android:icon="@drawable/ic_post"
            android:title="@string/my_posts"/>

        <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_collection"
            android:title="@string/my_favorites"/>

        <item
            android:id="@+id/navigation_reply"
            android:icon="@drawable/ic_comment"
            android:title="@string/my_replies"/>
    </group>

    <group
        android:id="@+id/menu_group_app"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>
    </group>
</menu>