<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 SamuelGjk <samuel.alva@outlook.com>
  ~
  ~ This file is part of DiyCode
  ~
  ~ DiyCode is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ DiyCode is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with DiyCode. If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/CollapsingToolbarTitle"
            app:contentScrim="?colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitle.Transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.github.mmin18.widget.FlexLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_user"/>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_centerX="50%"
                    app:layout_centerY="55%"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/text_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:layout_centerX="50%"
                    app:layout_top="prev.bottom"/>
            </com.github.mmin18.widget.FlexLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduce"
                android:textColor="@color/secondaryText"
                android:textSize="12sp"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="6dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card"
                android:lineSpacingMultiplier="1.2"
                android:padding="15dp"
                android:text="@string/app_introduce"
                android:textColor="@color/primaryText"
                android:textSize="12sp"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="10dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textColor="@color/secondaryText"
                android:textSize="12sp"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="6dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:background="@drawable/bg_card"
                android:lineSpacingMultiplier="1.2"
                android:padding="15dp"
                android:text="@string/developer_info"
                android:textColor="@color/primaryText"
                android:textSize="12sp"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="10dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_source_libs"
                android:textColor="@color/secondaryText"
                android:textSize="12sp"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="6dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/card_open_source_licenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:background="@drawable/bg_card"
                android:lineSpacingMultiplier="1.2"
                android:padding="15dp"
                android:text="@string/open_source_licenses"
                android:textColor="@color/primaryText"
                android:textSize="12sp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>